all the add book update delete show list

--- a/index.htm
+++ b/index.htm
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookstore</title>
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bookstore-Style.css">
-    <link rel="stylesheet" href="css/style_responsive.css">
+    <link rel="stylesheet" href="./assets/css/all.min.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/bookstore-Style.css">
+    <link rel="stylesheet" href="./assets/css/style_responsive.css">
     <!--Custom  Books css -->
     <link rel="stylesheet" href="./assets/css/books.style.css">
     <!--responsive Books custom css-->
@@ -35,7 +35,7 @@
             <div class="container-fluid g-0 navbar-container">
                 <nav class="row flex-nowrap g-0 nav-bar-parent">
                     <div class=" brand-img-div">
-                        <img class="brand-img" src="img/logo.png">
+                        <img class="brand-img" src="img/logo.png" />
                     </div>
                     <!-- media qurey-->
                     <div class="sublist-icon-div">
@@ -169,7 +169,7 @@
                                 <a class="nav-bar-list-item-link" href="#">home</a>
                                 <div class="home-tab rounded shadow">
                                     <ul class="dropdown-list">
-                                        <li class="dropdown-list-item"><a class="dropdown-list-item-link" id="first-item-in-the-list" href="#">main home</a></li>
+                                        <li class="dropdown-list-item"><a class="dropdown-list-item-link" id="first-item-in-the-list" href="./index.htm">main home</a></li>
                                         <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="#">bestselling author</a></li>
                                         <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="#">audiobook home</a></li>
                                         <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="#">childern's books</a></li>
@@ -306,7 +306,7 @@
                                 <a class="nav-bar-list-item-link" href="#">home</a>
                                 <div class="home-tab-second-navbar">
                                     <ul class="dropdown-list">
-                                        <li class="dropdown-list-item"><a class="dropdown-list-item-link" id="first-item-in-the-list" href="#">main home</a></li>
+                                        <li class="dropdown-list-item"><a class="dropdown-list-item-link" id="first-item-in-the-list" href="./index.htm">main home</a></li>
                                         <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="#">bestselling author</a></li>
                                         <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="#">audiobook home</a></li>
                                         <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="#">childern's books</a></li>
@@ -334,11 +334,11 @@
                                 </div>
                             </li>
                             <li class="nav-bar-list-item">
-                                <a class="nav-bar-list-item-link" href="#">events</a>
+                                <a class="nav-bar-list-item-link" href="#">admin</a>
                                 <div class="events-tab-second-navbar">
                                     <ul class="dropdown-list">
-                                        <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="#">event dates</a></li>
-                                        <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="#">event single</a></li>
+                                        <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="./addBook.html">add book</a></li>
+                                        <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="./booksList.html">books list</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -489,6 +489,8 @@
             </div>
         </header>
     </div>
+
+
     <div class="sidebar-parent shadow rounded">
         <div class="sidebar-content">
             <div class="close-btn-sidebar-div">
@@ -536,8 +538,8 @@
 
     <!--Bootstrap js 5-->
 
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/bookstore-JavaScript.js"></script>
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/bookstore-JavaScript.js"></script>
     <script src="./assets/js/book.js"></script>
 
 </body>
