Validation , sweet alert , footer

--- a/index.htm
+++ b/index.htm
@@ -79,8 +79,8 @@
                                     <a class="tab-item-link" href="#">Admin</a>
                                     <div class="events-first-level-sublist-div shadow rounded">
                                         <ul class="events-first-level-sublist-parent">
-                                            <li class="events-first-level-sublist-item"><a class="events-first-level-sublist-link" href="#">event dates</a></li>
-                                            <li class="events-first-level-sublist-item"><a class="events-first-level-sublist-link" href="#">event single</a></li>
+                                            <li class="events-first-level-sublist-item"><a class="events-first-level-sublist-link" href="addBook.html">Add book</a></li>
+                                            <li class="events-first-level-sublist-item"><a class="events-first-level-sublist-link" href="booksList.html">Book List</a></li>
                                         </ul>
                                     </div>
                                 </li>
@@ -534,6 +534,90 @@
         </div>
         <div class="arrivals" id="arrivals"> </div>
     </div>
+
+    <footer>
+        <div class="footer-info text-white p-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <h3>publisher</h3>
+                        <ul class="publisher-item mt-4">
+                            <li class="pb-2"><a href="#" class="text-decoration-none text-white">Bestsellers</a></li>
+                            <li class="pb-2"><a href="#" class="text-decoration-none text-white">Interviews</a></li>
+                            <li class="pb-2"><a href="#" class="text-decoration-none text-white">Authors Story</a></li>
+                            <li class="pb-2"><a href="#" class="text-decoration-none text-white">Book Fairs</a></li>
+                            <li class="pb-2"><a href="#" class="text-decoration-none text-white">Help (FAQ)</a></li>
+
+                        </ul>
+                    </div>
+                    <div class="col-lg-3">
+                        <div>
+                            <h3>Contact</h3>
+                            <p class="mt-4">Stay in touch with everything ChapterOne, follow us on social media and
+                                learn about new promotions.</p>
+                        </div>
+                        <div>
+                            <a href="#" class="pe-2 text-white"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#" class="pe-2 text-white"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="#" class="pe-2 text-white"><i class="fa-brands fa-facebook"></i> </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <h3>News & Update</h3>
+                        <p class="mt-4">We’d love it if you subscribed to our newsletter! You’ll love it too.</p>
+
+                    </div>
+                    <div class="col-lg-3">
+                        <h3>Social media</h3>
+                        <div class="mt-4 d-flex  flex-wrap justify-content-evenly ">
+                            <a href="#" target="_blank" class="card  bg-dark mb-2  social-img text-white">
+                                <img src="img/1.jpg" class="card-img" alt="...">
+                                <div class="card-img-overlay  ">
+                                    <p>insta</p>
+                                </div>
+
+                            </a>
+                            <a href="#" target="_blank" class="card  bg-dark mb-2  social-img text-white" >
+                                <img src="img/1.jpg" class="card-img" alt="...">
+                                <div class="card-img-overlay  ">
+                                    <p>insta</p>
+                                </div>
+
+                            </a>
+                            <a href="#" target="_blank" class="card  bg-dark mb-2  social-img text-white">
+                                <img src="img/1.jpg" class="card-img" alt="...">
+                                <div class="card-img-overlay  ">
+                                    <p>insta</p>
+                                </div>
+
+                            </a>
+                            <a href="#" target="_blank" class="card  bg-dark mb-2  social-img text-white">
+                                <img src="img/1.jpg" class="card-img" alt="...">
+                                <div class="card-img-overlay  ">
+                                    <p>insta</p>
+                                </div>
+
+                            </a>
+                            <a href="#" target="_blank" class="card  bg-dark mb-2  social-img text-white">
+                                <img src="img/1.jpg" class="card-img" alt="...">
+                                <div class="card-img-overlay  ">
+                                    <p>insta</p>
+                                </div>
+
+                            </a>
+                            <a href="#" target="_blank" class="card  bg-dark mb-2  social-img text-white">
+                                <img src="img/1.jpg" class="card-img" alt="...">
+                                <div class="card-img-overlay  ">
+                                    <p>insta</p>
+                                </div>
+
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <!--Bootstrap js 5-->
