edit required fild

--- a/addBook.html
+++ b/addBook.html
@@ -676,7 +676,7 @@
                             </div>
 
                             <div class="label-input">
-                                <div class="label">Price before discount <span class="text-danger fs-5">*</span> </div>
+                                <div class="label">Price before discount  </div>
                                 <input type="text" class="text-input form-control" placeholder="$" id="price-before" />
                             </div>
                             <div class="label-input">
