--- a/authors.html
+++ b/authors.html
@@ -28,18 +28,22 @@
     </div>
     <div class="add-course">  
         <div class="container">
-            <h1 class="curd-title">edit authors</h1>
-        <label for="">Title</label>
-        <input   class="inputs" type="text" placeholder="Title"  id="title">
+           <h1 class="curd-title">edit authors</h1>
+        <div><label for="title">Title</label></div>
+        <input   class="inputs title_input form-control " type="text" placeholder="Title"  id="title">
+        <div class="labelError"><label for="title" class="text-danger">Please start with capital letter!, this input should not include numbers or !@#$%^&*()_+{}|":?>/*-+</label></div>
         <!-- <div class="error">please start with capital later</div> -->
         <label for="">Name</label>
-        <input class="inputs"  type="text" placeholder="Name"  id="name">
-       
+        <input class="inputs name form-control "  type="text" placeholder="Name"  id="authorName">
+        <div class="labelErrorF"><label for="authorName" class="text-danger">Please start with capital letter!, this input should not include numbers or !@#$%^&*()_+{}|":?>/*-+</label></div>
         <label for="">Author Info</label>
-        <textarea class="inputs" placeholder="Author Info" id="authorInfo"></textarea>
+        <textarea class="inputs authorInfo form-control " placeholder="Author Info" id="authorInfoTextA"></textarea>
+        <div class="labelErrorS">
+            <label for="authorInfo" class="text-danger">Please start with capital letter!, this input should not include numbers or !@#$%^&*()_+{}|":?>/*-+</label>
+        </div>
         <div class="container btns-div d-flex">
-            <button class="add_btn btn btn-primary" id="click" >Add author</button>
-            <button class="clr-btn btn btn-danger"> <i class="fa-solid fa-trash-can "></i>clear all</button>
+            <button class="add_btn btn btn-primary" id="click" disabled >Add author</button>
+            <button class="clr-btn btn btn-danger">clear all</button>
             <button class="input-file-selector btn btn-outline-dark">choose image</button>
             <input type="file" class="img-file" id="image-file">
         </div>
