fixed local storage, this the final project

--- a/bookstore/index.htm
+++ b/bookstore/index.htm
@@ -539,7 +539,7 @@
                         <a class="nav-bar-list-item-link" href="#">home</a>
                         <div class="home-tab-second-navbar">
                             <ul class="dropdown-list">
-                                <li class="dropdown-list-item"><a class="dropdown-list-item-link" id="first-item-in-the-list" href="#">main home</a></li>
+                                <li class="dropdown-list-item"><a class="dropdown-list-item-link" id="first-item-in-the-list" href="index.htm">main home</a></li>
                                 <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="#">bestselling author</a></li>
                                 <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="#">audiobook home</a></li>
                                 <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="#">childern's books</a></li>
@@ -638,9 +638,9 @@
                         <a class="nav-bar-list-item-link" href="#">admin</a>
                         <div class="admin-tab-second-navbar  rounded shadow">
                             <ul class="dropdown-list">
-                                <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="#">books list</a></li>
-                                <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="#">authors</a></li>
-                                <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="#">add book</a></li>
+                                <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="booksList.html">books list</a></li>
+                                <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="authors.html">authors</a></li>
+                                <li class="dropdown-list-item"><a class="dropdown-list-item-link" href="addBook.html">add book</a></li>
                             </ul>
                         </div>
                     </li>
