added some media query and fixed some styles

--- a/bookstore/addBook.html
+++ b/bookstore/addBook.html
@@ -174,9 +174,9 @@
                                         <a class="tab-item-link" href="#">admin</a>
                                         <div class="admin-first-level-sublist-div shadow rounded">
                                             <ul class="admin-first-level-sublist-parent">
-                                                <li class="admin-first-level-sublist-item"><a class="admin-first-level-sublist-link" href="#">books list</a></li>
-                                                <li class="admin-first-level-sublist-item"><a class="admin-first-level-sublist-link" href="#">authors</a></li>
-                                                <li class="admin-first-level-sublist-item"><a class="admin-first-level-sublist-link" href="#">add book</a></li>
+                                                <li class="admin-first-level-sublist-item"><a class="admin-first-level-sublist-link" href="booksList.html">books list</a></li>
+                                                <li class="admin-first-level-sublist-item"><a class="admin-first-level-sublist-link" href="authors.html">authors</a></li>
+                                                <li class="admin-first-level-sublist-item"><a class="admin-first-level-sublist-link" href="addBook.html">add book</a></li>
                                             </ul>
                                         </div>
                                     </li>
@@ -676,12 +676,12 @@
 
 
     <!-- <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
-    <script src="assets/js/bookstore-JavaScript.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.3.3/sweetalert2.min.js"
         integrity="sha512-F3F53+tMh/CBxMQ60GN5R4EiFW7PcuND+9IDC3Qpkwc7SfxgzHigRdUO3+2+mNal2ot3Wp6KR0zx8r8BbsW+Bg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- <script src="sweetalert2.all.min.js"></script> -->
     <script src="./assets/js/addBooks.js"></script>
+    <script src="assets/js/bookstore-JavaScript.js"></script>
 
 </body>
 
