--- a/bookstore/authors.html
+++ b/bookstore/authors.html
@@ -161,9 +161,9 @@
                                     <a class="tab-item-link" href="#">admin</a>
                                     <div class="admin-first-level-sublist-div shadow rounded">
                                         <ul class="admin-first-level-sublist-parent">
-                                            <li class="admin-first-level-sublist-item"><a class="admin-first-level-sublist-link" href="#">books list</a></li>
-                                            <li class="admin-first-level-sublist-item"><a class="admin-first-level-sublist-link" href="#">authors</a></li>
-                                            <li class="admin-first-level-sublist-item"><a class="admin-first-level-sublist-link" href="#">add book</a></li>
+                                            <li class="admin-first-level-sublist-item"><a class="admin-first-level-sublist-link" href="booksList.html">books list</a></li>
+                                            <li class="admin-first-level-sublist-item"><a class="admin-first-level-sublist-link" href="authors.html">authors</a></li>
+                                            <li class="admin-first-level-sublist-item"><a class="admin-first-level-sublist-link" href="addBook.html">add book</a></li>
                                         </ul>
                                     </div>
                                 </li>
@@ -354,24 +354,26 @@
 
     </div>
 
-
-    <table class="border border-1 border-dark table table-dark table-striped w-100" cellspacing="0">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>title</th>
-                <th>name</th>
-                <th>info</th>
-                <th>image</th>
-                <th>update</th>
-                <th>delete</th>
-            </tr>
-        </thead>
-
-         <tbody id="data">
+    <div class="container">
+        <table class="border border-1 border-dark table table-dark table-striped w-100" cellspacing="0">
+            <thead>
+                <tr>
+                    <th  class=" col-sm-1 col-md-1 col-xxl-1">#</th>
+                    <th  class=" col-sm-1 col-md-1 col-xxl-1">title</th>
+                    <th  class=" col-sm-1 col-md-1 col-xxl-1">name</th>
+                    <th  class=" col-sm-5 col-md-1 col-xxl-1">info</th>
+                    <th  class=" col-sm-1 col-md-1 col-xxl-1">image</th>
+                    <th  class=" col-sm-1 col-md-1 col-xxl-1">update</th>
+                    <th  class=" col-sm-1 col-md-1 col-xxl-1">delete</th>
+                </tr>
+            </thead>
     
-        </tbody> 
-    </table>
+             <tbody id="data">
+        
+            </tbody> 
+        </table>
+    </div>
+
     </div>
 </div>
     <!-- second nav bar -->
