--- a/bookstore/booksList.html
+++ b/bookstore/booksList.html
@@ -177,9 +177,9 @@
                                         <a class="tab-item-link" href="#">admin</a>
                                         <div class="admin-first-level-sublist-div shadow rounded">
                                             <ul class="admin-first-level-sublist-parent">
-                                                <li class="admin-first-level-sublist-item"><a class="admin-first-level-sublist-link" href="#">books list</a></li>
-                                                <li class="admin-first-level-sublist-item"><a class="admin-first-level-sublist-link" href="#">authors</a></li>
-                                                <li class="admin-first-level-sublist-item"><a class="admin-first-level-sublist-link" href="#">add book</a></li>
+                                                <li class="admin-first-level-sublist-item"><a class="admin-first-level-sublist-link" href="booksList.html">books list</a></li>
+                                                <li class="admin-first-level-sublist-item"><a class="admin-first-level-sublist-link" href="authors.html">authors</a></li>
+                                                <li class="admin-first-level-sublist-item"><a class="admin-first-level-sublist-link" href="addBook.html">add book</a></li>
                                             </ul>
                                         </div>
                                     </li>
