--- a/bookstore/booksList.html
+++ b/bookstore/booksList.html
@@ -24,7 +24,8 @@
     <link rel="stylesheet" href="./assets/css/addBook.responsive.css">
     <link rel="stylesheet" href="./assets/css/bookstore-Style.css">
     <link rel="stylesheet" href="./assets/css/style_responsive.css">
-    
+    <link rel="stylesheet" href="./assets/css/updateBook.responsive.css">
+
     <title>Document</title>
 </head>
 
