trying to fix authors style sheet not loading up only on github

--- a/bookstore/authors.html
+++ b/bookstore/authors.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="assets/Css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.3.3/sweetalert2.css" rel="stylesheet">
-    <link rel='stylesheet' href='assets/css/all.min.css'>
+    <link rel='stylesheet' href="assets/css/all.min.css">
     <link rel="stylesheet" href="assets/css/bookstoreStyle.css">
     <link rel="stylesheet" href="assets/css/styleresponsive.css">
     <link rel="stylesheet" href="assets/css/authors.css">
+    <link rel="stylesheet" href="authors.css">
     
  
 </head>
