--- a/bookstore/index.htm
+++ b/bookstore/index.htm
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookstore</title>
-    <link rel="stylesheet" href="./assets/css/all.min.css">
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/css/bookstoreStyle.css">
-    <link rel="stylesheet" href="./assets/css/styleresponsive.css">
+    <link rel="stylesheet" href="assets/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/bookstoreStyle.css">
+    <link rel="stylesheet" href="assets/css/styleresponsive.css">
     <link rel="stylesheet" href="assets/css/authors.css">
     <!--Custom  Books css -->
-    <link rel="stylesheet" href="./assets/css/books.style.css">
+    <link rel="stylesheet" href="assets/css/books.style.css">
     <!--responsive Books custom css-->
-    <link rel="stylesheet" href="./assets/css/books.responsive.css">
+    <link rel="stylesheet" href="assets/css/books.responsive.css">
 </head>
 
 <body>
