trying to fix authors style sheet not loading up only on github

--- a/bookstore/authors.html
+++ b/bookstore/authors.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/bookstoreStyle.css">
     <link rel="stylesheet" href="assets/css/styleresponsive.css">
     <link rel="stylesheet" href="assets/css/authors.css">
-    <link rel="stylesheet" href="authors.css">
+    <link rel="stylesheet" href="https://github.com/Sahar-Abdalazeez/fullstack-project/tree/main/bookstore/assets/css/authors.css">
     
  
 </head>
